--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "6mYSH1yDOwvw"
@@ -355,7 +355,7 @@
         "    return u\"\".join([c for c in nfkd_form if not unicodedata.combining(c)])\n",
         "\n",
         "def find_title(title_raw, year_raw):\n",
-        "    year = re.search(year_re, year_raw)\n",
+        "    year = year_pt.search(year_raw)\n",
         "    year = year.group() if year else \"\"\n",
         "    title = \"{0} {1}\".format(title_raw, year)\n",
         "    table = title.maketrans(\"/\",\" \",\":'(,?)\")\n",
@@ -604,11 +604,12 @@
         "    elif isinstance(obj, object):\n",
         "        attrs = dir(obj)\n",
         "        attrs.sort()\n",
+        "        class_pt = re.compile(r\"(?<=<class ')([^']+)\")\n",
         "        for attrname in attrs:\n",
         "            try:\n",
         "                attrval = getattr(obj, attrname)\n",
         "                type1 = type(attrval)\n",
-        "                typestr = re.search(r\"(?<=<class ')([^']+)\", str(type1)).group()\n",
+        "                typestr = class_pt.search(str(type1)).group()\n",
         "                if (filterprefixed and attrname.startswith(\"_\")) or (types and not type1 in types) or (filtertypes and (type1 in filtertypes)):\n",
         "                    continue\n",
         "            except:\n",
@@ -646,6 +647,7 @@
         "            for line in lines:\n",
         "                print(line)\n",
         "#\n",
+        "\n",
         "import string\n",
         "SMALL = r'a|an|and|as|at|but|by|en|for|if|in|of|on|or|the|to|v\\.?|via|vs\\.?'\n",
         "PUNCT = r\"\"\"!\"“#$%&'‘()*+,\\-–‒—―./:;?@[\\\\\\]_`{|}~\"\"\"\n",
@@ -675,10 +677,7 @@
         "    return ImmutableString(text)\n",
         "\n",
         "def set_small_word_list(small=SMALL):\n",
-        "    global SMALL_WORDS\n",
-        "    global SMALL_FIRST\n",
-        "    global SMALL_LAST\n",
-        "    global SUBPHRASE\n",
+        "    global SMALL_WORDS, SMALL_FIRST, SMALL_LAST, SUBPHRASE\n",
         "    SMALL_WORDS = re.compile(r'^(%s)$' % small, re.I)\n",
         "    SMALL_FIRST = re.compile(r'^([%s]*)(%s)\\b' % (PUNCT, small), re.I)\n",
         "    SMALL_LAST = re.compile(r'\\b(%s)[%s]?$' % (small, PUNCT), re.I)\n",
@@ -764,7 +763,7 @@
         "            CONSONANTS = ''.join(set(string.ascii_lowercase)\n",
         "                                 - {'a', 'e', 'i', 'o', 'u', 'y'})\n",
         "            is_all_consonants = re.search('\\A[' + CONSONANTS + ']+\\Z', word,\n",
-        "                                             flags=re.IGNORECASE)\n",
+        "                                             flags= re.IGNORECASE)\n",
         "            if is_all_consonants and len(word) > 2:\n",
         "                tc_line.append(word.upper())\n",
         "                continue\n",
@@ -790,6 +789,8 @@
         "        processed.append(result)\n",
         "    result = \"\\n\".join(processed)\n",
         "    return result\n",
+        "\n",
+        "##\n",
         "\n",
         "size_limit = 40000\n",
         "def pathsize(path, string = False):\n",
@@ -1018,7 +1019,8 @@
         "\n",
         "## 1337x\n",
         "\n",
-        "X1337X_BASE = 'https://1337x.unblockit.esq'\n",
+        "X1337XPROXEY_BASE = 'https://1337x.unblockit.esq'\n",
+        "X1337X_BASE = 'https://1337x.to'\n",
         "\n",
         "X1337X_TV = \"TV\"\n",
         "X1337X_MOVIES = \"Movies\"\n",
@@ -1100,22 +1102,29 @@
         "\n",
         "#### API / abstraction \n",
         "\n",
-        "url_re = r\"^((http[s]?):\\/\\/)?([^:\\/\\s]+)((\\/\\w+\\/)*\\/)([\\w\\-\\.]+[^#?\\s]+)(.*)?(#[\\w\\-]+)?\"\n",
-        "sm_re = r\"(?<=Shareddrives\\/)[A-Z]*(?=\\/)\"\n",
-        "season_re0 = r\"\\b([S,s]|[S,s]eason([\\s,\\.]?))\\d{1,2}\"\n",
-        "featurettes_re = r\"[F,f]eature[a-z]*|[E,e]xtras?\"\n",
-        "mf_re = r\"((?<=\\b[S,s])|(?<=[S,s]eason)|(?<=[S,s]eason[\\s,\\.]))([1-9][0-9]?|0?[1-9])\"                       \n",
-        "sn2num = r\"[1-9][0-9]?(?=[Xx]\\d{1,2}\\b)\"\n",
-        "eps_re = r\"\\b([Ss]\\d{1,2}[Ee]\\d{1,2}|\\d{1,2}[xX]\\d{1,2}|[Ss]n?\\d{1,2}\\s?[Ee](ps?)?\\d{1,2})(?=[\\s\\.])\"\n",
-        "check_sn_re = r\"[\\s,\\.]([S,s]\\d{1,2}|[Ss][Ee][Aa][Ss][Oo][Nn]([\\s,\\.]?)\\d{1,2})(?=[\\s,\\.]|e\\d{1,2}-\\d{1,2})(?!\\sto)\"\n",
-        "eps2num_re = r\"(?<=\\d{1}[Xx])\\d{1,2}\\b\"\n",
-        "year_re = r\"\\d{4}\" \n",
-        "re_suf = r\"\\s\\d{1,2}$\"\n",
-        "sn_in = r\"([S,s]|([S,s]easons?\\s?))\\d{1,2}\"\n",
-        "sn_nm = r\"([1-9][0-9]?)\"\n",
-        "skip_re = r\"(.txt)|(.i?nfo?)|(www.yts)|(RARBG_DO_NOT|rarbg_do_not)\"\n",
-        "del_re = r\"\\.del\\d*\\/\"\n",
-        "sd_re = r\"(\\/content\\/drive\\/Shareddrives\\/)[A-Za-z0-9]+(?=\\/)\"\n",
+        "#url_pt = re.compile(r\"^((http[s]?):\\/\\/)?([^:\\/\\s]+)((\\/\\w+\\/)*\\/)([\\w\\-\\.]+[^#?\\s]+)(.*)?(#[\\w\\-]+)?\")\n",
+        "#sm_pt = re.compile(r\"(?<=Shareddrives\\/)[A-Z]*(?=\\/)\")\n",
+        "#sn2num_pt = re.compile(r\"[1-9][0-9]?(?=[Xx]\\d{1,2}\\b)\")\n",
+        "#eps2num_pt = re.compile(r\"(?<=\\d{1}[Xx])\\d{1,2}\\b\")\n",
+        "#skip_re = re.compile(r\"(.txt)|(.i?nfo?)|(www.yts)|(RARBG_DO_NOT|rarbg_do_not)\")\n",
+        "\n",
+        "season_pt1 = re.compile(r\"\\b([S,s]|[S,s]eason([\\s,\\.]?))\\d{1,2}\")\n",
+        "featurettes_pt = re.compile(r\"[F,f]eature[a-z]*|[E,e]xtras?\")\n",
+        "mf_pt = re.compile(r\"((?<=\\b[S,s])|(?<=[S,s]eason)|(?<=[S,s]eason[\\s,\\.]))([1-9][0-9]?|0?[1-9])\")\n",
+        "eps_pt = re.compile(r\"\\b([Ss]\\d{1,2}[Ee]\\d{1,2}|\\d{1,2}[xX]\\d{1,2}|[Ss]n?\\d{1,2}\\s?[Ee](ps?)?\\d{1,2})(?=[\\s\\.])\")\n",
+        "check_sn_pt = re.compile(r\"[\\s,\\.]([S,s]\\d{1,2}|[Ss][Ee][Aa][Ss][Oo][Nn]([\\s,\\.]?)\\d{1,2})(?=[\\s,\\.]|e\\d{1,2}-\\d{1,2})(?!\\sto)\")\n",
+        "year_pt = re.compile(r\"\\d{4}\")\n",
+        "yearsuff_pt = re.compile(r\"\\d{4}$\")\n",
+        "langs_pt = re.compile(r\"(?<=\\_|-|\\.|\\s)(Arabic|ar|English|en|French|fr|german|de|Finnish|fi|dutch|nl|Danish|da|greek|el|hindi|hi|Indonesian|id|italian|it|Japanese|ja|Korean|ko|Norwegian|no|Persian|fa|Polish|pl|Portuguese|pt|Russian|ru|Swedish|sv|Thai|th|Ukrainian|uk|Urdu|ur|Vietnamese|vi|spanish|es|Romanian|ro|Hungarian|hu)\", flags= re.IGNORECASE)\n",
+        "digitssuff_pt = re.compile(r\"\\s\\d{1,2}$\")\n",
+        "sn_in_pt = re.compile(r\"([S,s]|([S,s]easons?\\s?))\\d{1,2}\")\n",
+        "sn_nm_pt = re.compile(r\"([1-9][0-9]?)\")\n",
+        "del_pt = re.compile(r\"\\.del\\d*\\/\")\n",
+        "sd_pt = re.compile(r\"(\\/content\\/drive\\/Shareddrives\\/)[A-Za-z0-9]+(?=\\/)\")\n",
+        "imdbcount_pt = re.compile(r\"\\d+(?=\\stitles?)\")\n",
+        "l337xpages_pt = re.compile(r'(?<=/)\\d+(?=/)')\n",
+        "stars_pt = re.compile(r\"(?<=Stars:)<a href.*</a>\")\n",
+        "director_pt = re.compile(r\"(((?<=Director:)<a href.*</a>)|((?<=Directors:)<a href.*</a>))(?=<span)\")\n",
         "\n",
         "class DownloadAttrs:\n",
         "    def __init__(self, type_ = GENERAL, replace = False, backup = False, save_name = \"\", sequential= False, \n",
@@ -1547,7 +1556,7 @@
         "        error('Name is empty.')\n",
         "        raise Exception('Trans title,name is empty.')\n",
         "    name = name.replace(\"&\",\"and\")\n",
-        "    dgts = re.findall(year_re, name)\n",
+        "    dgts = year_pt.findall(name)\n",
         "    year = \"\"\n",
         "    if dgts: \n",
         "        if len(dgts) == 1 :\n",
@@ -1560,7 +1569,7 @@
         "    return name.translate(table).lower() + year #if not show else name.translate(table).lower()\n",
         "\n",
         "def get_year(name): \n",
-        "    dgts = re.findall(year_re, name.split('1080')[0])\n",
+        "    dgts = year_pt.findall(name.split('1080')[0])\n",
         "    if dgts: \n",
         "        return dgts[-1]\n",
         "    else:\n",
@@ -1568,14 +1577,14 @@
         "\n",
         "def get_season(name, allow_year = True):\n",
         "    info(f'Retrieving season from: {name}')\n",
-        "    lookup = re.search(mf_re, name)\n",
+        "    lookup = mf_pt.search(name)\n",
         "    if lookup:\n",
         "        sn = lookup.group()\n",
         "        sn = 'S' + sn if len(sn) != 1 else 'S0' + sn\n",
         "        info(f'Found season: {sn}')\n",
         "        return sn\n",
         "\n",
-        "    lookup = re.search(featurettes_re, name)\n",
+        "    lookup = featurettes_pt.search(name)\n",
         "    if lookup:\n",
         "        ft = lookup.group()\n",
         "        info(f'Extra folder: {ft}')\n",
@@ -1596,7 +1605,7 @@
         "        name = name.split('720p')[0]\n",
         "    table = name.maketrans(\".\",\" \",\"()\")\n",
         "    trans = name.translate(table)\n",
-        "    dgts = re.findall(year_re, trans)\n",
+        "    dgts = year_pt.findall(trans)\n",
         "    if dgts and len(dgts) >= 1:\n",
         "         res = f\"{trans.split(dgts[-1])[0].strip()} {dgts[-1]}\"\n",
         "    else:\n",
@@ -1604,18 +1613,19 @@
         "    return title(res)\n",
         "\n",
         "def name_show(name, quality = \"1080\"): \n",
+        "\n",
         "    if quality in name:\n",
         "        name = name.split(quality)[0]\n",
         "    elif \"720p\" in name:\n",
         "        name = name.split(\"720p\")[0]    \n",
         "    table = name.maketrans(\".\",\" \",\"'()\")\n",
         "    trans = name.translate(table)\n",
-        "    search = re.search(year_re, trans)\n",
+        "    search = year_pt1.search(trans)\n",
         "    if search: \n",
         "        year = search.group()\n",
         "        res = f\"{trans.split(year)[0].strip()} {year}\"\n",
         "    else:\n",
-        "        search = re.search(season_re0, trans)\n",
+        "        search = season_pt1.search(trans)\n",
         "        if search: \n",
         "            res = trans.split(search.group())[0].strip()\n",
         "        else: \n",
@@ -1709,7 +1719,7 @@
         "        targetshow = showsearch['foundname']\n",
         "        seasonpath = path_season(targetshow, season)\n",
         "        if os.path.exists(seasonpath) and not is_empty(seasonpath):\n",
-        "            check = re.search(eps_re, searchepisode)\n",
+        "            check = eps_pt.search(searchepisode)\n",
         "            eps = check.group() if check else searchepisode\n",
         "            epses = next(os.walk(seasonpath))[2]\n",
         "            for targetepisode in epses:\n",
@@ -1805,10 +1815,10 @@
         "        !mv \"$path\" \"$rp\"\n",
         "\n",
         "def get_tv_type(attrs: DownloadAttrs):\n",
-        "    search = re.search(eps_re, attrs.name)\n",
+        "    search = eps_pt.search(attrs.name)\n",
         "    if search:\n",
         "        return EPISODE\n",
-        "    search = re.search(check_sn_re, attrs.name)\n",
+        "    search = check_sn_pt.search(attrs.name)\n",
         "    if search:\n",
         "        return SEASON  \n",
         "\n",
@@ -2168,12 +2178,14 @@
         "        diritem =  ('', clean_season(path))\n",
         "        attrs.downloaded_dirs.append(diritem)\n",
         "  \n",
-        "def after_shave (path, newname, v= False, pathitems = []):\n",
+        "def after_shave(path, newname, v= False, pathitems = []):\n",
         "    dircontent = next(os.walk(path))[2]\n",
-        "    item1 = ('', [])\n",
+        "    diritem = ('', [])\n",
+        "    srtcount = 0\n",
         "    for file in dircontent:\n",
-        "        srt = 0\n",
+        "        suff = ''\n",
         "        split = os.path.splitext(file)\n",
+        "        filenamewithoutextension = split[0]\n",
         "        ext = split[1]\n",
         "        p1 = path + \"/\" + file\n",
         "        if any(contains(file, check) for check in skip_list):\n",
@@ -2182,25 +2194,22 @@
         "            !rm \"$p1\"\n",
         "            continue\n",
         "        elif  (ext == \".mp4\" or ext == \".mkv\" or ext == \".srt\" or ext == \".idx\"):\n",
-        "            extra = \"\"\n",
         "            if ext == \".srt\": \n",
-        "                if re.split(re_suf, split[0])[0] != newname:\n",
-        "                    if srt > 0 :\n",
-        "                        extra = \" \" + str(srt)\n",
-        "                    srt += 1\n",
+        "                langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
+        "                if langsearch:\n",
+        "                    suff = f\".{title(langsearch[-1])}\" \n",
         "                else:\n",
-        "                    item1[1].append(file)\n",
-        "                    continue\n",
-        "            elif split[0] == newname:\n",
-        "                item1[1].append(file)\n",
-        "                continue\n",
-        "            file = newname + extra + ext\n",
-        "            if v:\n",
-        "                print(f\"Renaming: {p1[36:]} to {file}\")\n",
-        "            p2 = path + \"/\" + file\n",
-        "            !mv \"$p1\" \"$p2\"\n",
-        "            item1[1].append(file)\n",
-        "    pathitems.append(item1)\n",
+        "                    srtcount += 1\n",
+        "                    suff = f\"-{srtcount}\"\n",
+        "\n",
+        "            if filenamewithoutextension != newname:\n",
+        "                filenewname = newname + suff + ext\n",
+        "                if v: print(f\"Renaming: {p1[36:]} to {filenewname}\")\n",
+        "                p2 = path + \"/\" + filenewname\n",
+        "                !mv \"$p1\" \"$p2\"\n",
+        "                file = filenewname\n",
+        "            diritem[1].append(file)\n",
+        "    pathitems.append(diritem)\n",
         "    subdir = \"Subs\"\n",
         "    subspath = path + \"/\" + subdir\n",
         "    if not os.path.exists(subspath):\n",
@@ -2215,7 +2224,7 @@
         "        split = os.path.splitext(sub)\n",
         "        ext = split[1]\n",
         "        srtname = f\"{newname} {str(count)}\" if count > 0 else newname\n",
-        "        if ext == '.srt' and re.split(re_suf, split[0])[0] != newname:\n",
+        "        if ext == '.srt' and digitssuff_pt.split(split[0])[0] != newname:\n",
         "            newsub = srtname + ext \n",
         "            p1 = subspath + \"/\" + sub\n",
         "            p2 = subspath + \"/\" + newsub\n",
@@ -2255,7 +2264,7 @@
         "\n",
         "def clean_movie(path, name, movie_path = config.movies_path):\n",
         "    newname = name\n",
-        "    search = re.search(r\"\\d{4}$\", name)\n",
+        "    search = yearsuff_pt.search(name)\n",
         "    if not search:\n",
         "        newname = name_movie(name)\n",
         "        p1 = path\n",
@@ -2325,17 +2334,13 @@
         "\n",
         "from math import ceil\n",
         "\n",
-        "windowtargetstr = 'target=\"_blank\" style= \"color: rgb(1, 74, 118); text-decoration: none;\"'\n",
-        "stars_re = r\"(?<=Stars:)<a href.*</a>\"\n",
-        "director_re = r\"(((?<=Director:)<a href.*</a>)|((?<=Directors:)<a href.*</a>))(?=<span)\"\n",
+        "linkhtmlstr = 'target=\"_blank\" style= \"color: rgb(1, 74, 118); text-decoration: none;\"'\n",
         "\n",
-        "def process_title_link(title_tag, year_text):\n",
-        "    #year = re.search(year_re, year_raw)\n",
-        "    #year = f\" {year.group()}\" if year else \"\"\n",
-        "    title = str(title_tag).replace(\"</a>\", f\" {year_text}</a>\")\n",
-        "    table = title.maketrans({\":\":None, \"(\": None, \"?\": None, \")\": None})\n",
-        "    title = title.translate(table).replace(\"&\", \"and\")\n",
-        "    return title.replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') #normalizestring(title)\n",
+        "def process_external_link(title_tag, suff_text= \"\", base= \"\"):\n",
+        "    if suff_text:\n",
+        "        title = str(title_tag).replace(\"</a>\", f\" {suff_text}</a>\")\n",
+        "    title = title.replace('<a href=\"', f'<a {linkhtmlstr} href=\"{base}') \n",
+        "    return title\n",
         "\n",
         "def updateIMDBresult(result: IMDBResult, page):\n",
         "    if page in result.resultpages:\n",
@@ -2406,7 +2411,7 @@
         "            error(\"AdvancedIMDBSearch: Error: An error occured while performing the web scrapping.\")\n",
         "            return\n",
         "        countText = main.select_one(\"div.nav > div.desc > span\").text\n",
-        "        countSearch = re.search(r\"\\d+(?=\\stitles?)\", countText)\n",
+        "        countSearch = imdbcount_pt.search(countText)\n",
         "        if countSearch:\n",
         "            result.resultscount = int(countSearch.group())\n",
         "            result.totalpages = ceil(result.resultscount/perpage)\n",
@@ -2425,7 +2430,7 @@
         "            try:\n",
         "                title_tag  = item.find(class_=\"lister-item-header\").a\n",
         "                year_text  = item.find(class_=\"lister-item-year\").text\n",
-        "                title_link = process_title_link(title_tag, year_text)\n",
+        "                title_link = process_external_link(title_tag, year_text, IMDB_BASE)\n",
         "                title_text = find_title(title_tag.text, year_text)\n",
         "                runtime    = item.find(class_=\"runtime\")\n",
         "                rating     = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
@@ -2437,10 +2442,10 @@
         "                else: genres = \"\"\n",
         "                ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\")\n",
         "                pplstr = str(ppl).replace('\\n', '')\n",
-        "                search = re.search(stars_re, pplstr)\n",
-        "                stars = search.group().replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') if search else \"\"\n",
-        "                search = re.search(director_re, pplstr)\n",
-        "                directors = search.group().replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') if search else \"\"\n",
+        "                search = stars_pt.search(pplstr)\n",
+        "                stars = search.group().replace('<a href=\"', f'<a {linkhtmlstr} href=\"{IMDB_BASE}') if search else \"\"\n",
+        "                search = director_pt.search(pplstr)\n",
+        "                directors = search.group().replace('<a href=\"', f'<a {linkhtmlstr} href=\"{IMDB_BASE}') if search else \"\"\n",
         "                title= IMDBTitle(title_text= title_text, title_link= title_link, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, stars= stars)\n",
         "                if title_text in config.watched_movies_list:\n",
         "                    title.watched = True\n",
@@ -2727,7 +2732,7 @@
         "        result = SearchResult(search= search, site= X1337X, category= ALLCATEGORIES_TD, attrs= attrs)\n",
         "    search_s = search.replace(\"'\", \" \").replace(\" \",\"%20\")\n",
         "    parameters = f\"/sort-category-search/{search_s}/{category}/{sort}/{page}/\" if category else f\"/sort-search/{search_s}/{sort}/{page}/\"\n",
-        "    url = X1337X_BASE + parameters\n",
+        "    url = X1337XPROXEY_BASE + parameters\n",
         "    info(f\"Scraping 1337x search for: {search} Page: {page}\\nURL: {url}.\")\n",
         "    download_state = \"downloaded\" if check_download(attrs.type_, search) else \"not downloaded\"\n",
         "    info(f\"{search} is {download_state}.\")\n",
@@ -2743,7 +2748,7 @@
         "            lastpgelement = pagination.find(attrs= {'class':'last'})\n",
         "            if lastpgelement:\n",
         "                lastpg = lastpgelement.a\n",
-        "                totalpages = int(re.search( r'(?<=/)\\d+(?=/)', lastpg.get('href')).group())\n",
+        "                totalpages = int(l337xpages_pt.search(lastpg.get('href')).group())\n",
         "            else:\n",
         "                totalpages = page\n",
         "            previouspage = page - 1\n",
@@ -2764,20 +2769,20 @@
         "        else:\n",
         "            result.status = SUCCUSS\n",
         "            all_res = main_element.findAll(\"tr\")\n",
-        "            name = size = uploader = seeders = leechers = \"\"\n",
+        "            resulturl = size = uploader = seeders = leechers = \"\"\n",
         "            results = [] \n",
         "            if all_res:\n",
         "                info(f\"Results found: {len(all_res)}.\")\n",
         "                for i in  range(len(all_res)):\n",
         "                    alldata: list[Tag] = all_res[i].findAll(\"td\")\n",
-        "                    name = alldata[0].findAll(\"a\")[1].text\n",
+        "                    resulturl = process_external_link(alldata[0].findAll(\"a\")[1], base= X1337X_BASE)\n",
         "                    size = alldata[4].contents[0]\n",
         "                    date = alldata[3].text\n",
         "                    seeders = alldata[1].text\n",
         "                    leechers = alldata[2].text\n",
         "                    uploader = alldata[5].a.text\n",
-        "                    href = X1337X_BASE + alldata[0].findAll(\"a\")[1]['href']\n",
-        "                    res = DownloadResult(name= name, size= size, date= date, seeders= seeders, leechers= leechers, uploader= uploader, href= href)\n",
+        "                    href = X1337XPROXEY_BASE + alldata[0].findAll(\"a\")[1]['href']\n",
+        "                    res = DownloadResult(name= resulturl, size= size, date= date, seeders= seeders, leechers= leechers, uploader= uploader, href= href)\n",
         "                    results.append(res)\n",
         "                result.resultcount = len(results)\n",
         "                result.results = results\n",
@@ -3282,7 +3287,7 @@
         "    print('..... Done .....\\n')\n",
         "\n",
         "def check_sd_base(path):\n",
-        "  lookup = re.search(sd_re, path)\n",
+        "  lookup = sd_pt.search(path)\n",
         "  if lookup:\n",
         "      p0 = lookup.group()  \n",
         "      if os.path.exists(p0):\n",
@@ -3518,7 +3523,7 @@
         "    info('Reverting transfered files.')\n",
         "    for path in delpaths:\n",
         "        path0 = path + '/*'\n",
-        "        path1 = re.sub(del_re, '', path)\n",
+        "        path1 = del_pt.sub('', path)\n",
         "        mv(path0, path1, backup = backup)\n",
         "    return\n",
         "\n",
@@ -3532,9 +3537,9 @@
         "    info(f'Transfering files for: {name}\\nNewname: {attrs.save_name}')\n",
         "    p2 = done_path + \"/\" + attrs.save_name\n",
         "    if os.path.exists(p1):\n",
-        "        single = not os.path.isdir(p1)\n",
-        "        if single:\n",
-        "            info(f'The download is a single file without a directory\\nMoving the download into a directory with the same name.')\n",
+        "        hasnodir = not os.path.isdir(p1)\n",
+        "        if hasnodir: #move all dirless files here\n",
+        "            info(f'The download doesnt have a directory\\nMoving the download into a directory with the same name.')\n",
         "            p0 = status.save_path + \"/\" + os.path.splitext(name)[0]\n",
         "            os.makedirs(p0, exist_ok = True)\n",
         "            if not copy:\n",
@@ -3546,7 +3551,7 @@
         "            p1 = p0 \n",
         "        shave_download(handle, p0, p1)\n",
         "        clean_download(attrs, path = p1)\n",
-        "        if (not copy) or single:\n",
+        "        if (not copy) or hasnodir:\n",
         "            info(f'Moving to done path with the new name\\n {p1} to {p2}')\n",
         "            !mv \"$p1\" \"$p2\"\n",
         "        else:\n",
@@ -3891,16 +3896,13 @@
         "        for file in files: file.selected = True\n",
         "    else:\n",
         "        for file in files: file.selected = False\n",
-        "    \n",
-        "sn_in = r\"([S,s]|([S,s]easons?\\s?))\\d{1,2}\"\n",
-        "sn_nm = r\"([1-9][0-9]?)\"\n",
         "\n",
         "def getfileselectionwithstr(files: list[DownloadFile], selectionstr = \"\"):\n",
         "    if not selectionstr:\n",
         "        return False\n",
         "    includerange = []\n",
         "    excluderange = []\n",
-        "    seasonselectionstr = \"\"\n",
+        "    seasonselectionstr_pt = \"\"\n",
         "    if ',' in selectionstr:\n",
         "        inputs = selectionstr.split(',')\n",
         "    else:\n",
@@ -3909,13 +3911,13 @@
         "        for i  in inputs:\n",
         "            i = i.strip()\n",
         "            if i[0] == 's' or i[0] == 'S':\n",
-        "                lookup = re.search(sn_in, i)\n",
+        "                lookup = sn_in_pt.search(i)\n",
         "                if lookup:\n",
         "                    if '-' in i:\n",
         "                        rng = i.split('-')\n",
-        "                        lookup1 = re.search(sn_nm, rng[0])\n",
+        "                        lookup1 = sn_nm_pt.search(rng[0])\n",
         "                        start = lookup1.group() if lookup1 else ''\n",
-        "                        lookup1 = re.search(sn_nm, rng[1])\n",
+        "                        lookup1 = sn_nm_pt.search(rng[1])\n",
         "                        end = lookup1.group() if lookup1 else ''\n",
         "                        if not (start or end):\n",
         "                            continue\n",
@@ -3926,16 +3928,16 @@
         "                        else:\n",
         "                            add = [int(end)]\n",
         "                    else:\n",
-        "                        lookup1 = re.search(sn_nm, i)\n",
+        "                        lookup1 = sn_nm_pt.search(i)\n",
         "                        if lookup1:\n",
         "                            add = [int(lookup1.group())]\n",
         "                    si2 = 0\n",
-        "                    if seasonselectionstr:\n",
-        "                        seasonselectionstr += '|'\n",
+        "                    if seasonselectionstr_pt:\n",
+        "                        seasonselectionstr_pt += '|'\n",
         "                    for item in add:\n",
         "                        sep = '|' if 0 < si2 < len(add) else ''\n",
         "                        zero = '0?' if item < 10 else '' \n",
-        "                        seasonselectionstr += f'{sep}({zero}{item})' \n",
+        "                        seasonselectionstr_pt += f'{sep}({zero}{item})' \n",
         "                        si2 += 1                      \n",
         "\n",
         "            elif i.lower().startswith('n:'):\n",
@@ -3955,15 +3957,15 @@
         "    except Exception as e:\n",
         "        error(ex())\n",
         " \n",
-        "    seasonselectionstr =  r\"\\b\" + f\"[Ss]({seasonselectionstr})\" + r\"(?=[Ee]|\\s|\\.)\" if seasonselectionstr else \"\"\n",
-        "    includes = True if len(includerange) >= 1 or seasonselectionstr else False \n",
+        "    seasonselectionstr_pt =  re.compile(r\"\\b\" + f\"[Ss]({seasonselectionstr_pt})\" + r\"(?=[Ee]|\\s|\\.)\") if seasonselectionstr_pt else \"\"\n",
+        "    includes = True if len(includerange) >= 1 or seasonselectionstr_pt else False \n",
         "    excludes = True if len(excluderange) >= 1 else False \n",
         "    for file in files:\n",
         "        i = file.index\n",
         "        if excludes and (i in excluderange):\n",
         "            file.selected = False\n",
         "        elif includes:\n",
-        "            if (seasonselectionstr and re.search(seasonselectionstr, file.name)) or (i in includerange):\n",
+        "            if (seasonselectionstr_pt and seasonselectionstr_pt.search(seasonselectionstr_pt, file.name)) or (i in includerange):\n",
         "                file.selected = True\n",
         "            else:\n",
         "                file.selected = False\n",
